Added the introduction section, docpanel section, and the extensions section to the JupyterLab page. Extensions section is almost complete, slider items need to be finished.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,6 +35,8 @@
     <!-- Place this tag right after the last button or just before your close body tag. -->
     <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
     <script src="{{site.baseurl}}/js/scroll.js"></script>
+    <script src="{{site.baseurl}}/js/morphext.js"></script>
     <script src="{{site.baseurl}}/js/architecture.js"></script>
     <script src="{{site.baseurl}}/js/simon.js"></script>
+    <script src="{{site.baseurl}}/js/tab.js"></script>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
