--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/css/logo-nav.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/css/documentation.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/animate.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/morphext.css" | prepend: site.baseurl }}">
     <link rel="icon" type="image/png" href="favicon.ico" />
     <link href="{{site.baseurl}}/assets/apple-touch-icon.png" rel="apple-touch-icon" />
     <link href="{{site.baseurl}}/assets/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76" />
@@ -24,6 +26,7 @@
     <link href="{{site.baseurl}}/assets/icon-hires.png" rel="icon" sizes="192x192" />
     <link href="{{site.baseurl}}/assets/icon-normal.png" rel="icon" sizes="128x128" />
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
