--- a/css/logo-nav.css
+++ b/css/logo-nav.css
@@ -1,4 +1,5 @@
 body {
+    font-family: 'Roboto', sans-serif;
     font-weight: 400;
     /* Required padding for .navbar-fixed-top. Change if height of navigation changes. */
     padding-top: 70px;
@@ -13,7 +14,7 @@ body {
     -webkit-transition: .2s;
 }
 .navbar-white {
-  background-color: white;
+  background-color: rgba(255,255,255,.92);
 }
 .navbar-gray {
     background-color: rgb(248,248,248);
@@ -31,7 +32,7 @@ body {
     color: #E46E2E;
 }
 .navbar-scroll {
-  background-color: white;
+  background-color: rgba(255,255,255,.96);
     animation-duration: 2s;
     animation-name: smooth;
     -moz-box-shadow: 1px 1px 1px #999;
@@ -49,6 +50,7 @@ body {
     padding: 12px 16px 10px;
 }
 .nav > li > a:hover {
+    cursor: pointer;
     background-color: transparent;
     color: #E46E2E;
     -webkit-transition: .2s;
@@ -179,15 +181,19 @@ body {
 
 /* Section elements */
 /* Section classes used for particular sections within a page. Sections should differ in background color when used next to each other */
+.section-white, .section-grey, .section-dark-grey {
+    padding: 100px 0px;
+}
 .section-white {
     background-color: white;
-    padding: 56px 0;
 }
 .section-grey {
-  background-color: #fafafa;
-  border-bottom: 1px solid #E0E0E0;
-  border-top: 1px solid #E0E0E0;
-  padding: 56px 0;
+    background-color: #fafafa;
+    border-bottom: 1px solid #E0E0E0;
+    border-top: 1px solid #E0E0E0;
+}
+.section-dark-grey {
+    background-color: #616161;
 }
 /* Used to specifying when a section is at the top or bottom of the page to apply appropriate border */
 .top-section-border {
@@ -207,14 +213,23 @@ body {
 }
 /* Header for each section */
 .section-header {
-    margin: 12px auto 8px;
+    margin: 16px auto 12px;
     text-align: center;
 }
+
+.section-header-left {
+    text-align: left;
+}
+
+.section-dark-grey .section-header, .section-dark-grey .support-paragraph {
+    color: white;
+}
+
 /* Used for descriptions of sections underneath section headers*/
 .support-paragraph {
-    font-size: 15px;
+    font-size: 16px;
     line-height: 1.5;
-    margin-bottom: 16px;
+    margin-bottom: 24px;
     text-align: center;
 }
 
@@ -613,12 +628,9 @@ body {
 
 /* Styling for JupyterLab page */
 
-.jupyterlab-jumbotron {
+.lab-jumbotron {
     height: 500px;
     color: white;
-    background-image: url(../assets/jupyterlab-space-bg.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
     position: relative;
     top: -70px;
     margin-bottom: -70px;
@@ -627,18 +639,18 @@ body {
     z-index: -1;
 }
 
-.jupyterlab-jumbotron h2 {
+.lab-jumbotron h2 {
     margin-bottom: 4px;
 }
 
-.jupyterlab-header {
+.lab-header {
     position: relative;
     top: 100px;
     z-index: -1;
     animation: showHeaderText 1s ease 3s forwards;
 }
 
-.jupyterlab-header-logo {
+.lab-header-logo {
     visibility:hidden;
     width: 328px;
     display: block;
@@ -648,12 +660,13 @@ body {
     top: 24px;
 }
 
-.jupyterlab-header-subhead {
+.lab-header-subhead {
+    color: #E0E0E0;
     /* Using this font size to make the header and subhead the same width */
     font-size: 18px;
 }
 
-.jupyterlab-header-preview {
+.lab-header-preview {
     width: 800px;
     padding-top: 16px;
     z-index: 1;
@@ -684,6 +697,30 @@ body {
     width: 372px;
     top: 212px;
     left: 52px;
+}
+
+.lab-content-wrapper {
+    overflow-x: hidden;
+}
+
+.lab-content-wrapper .container {
+    width: 832px;
+}
+
+.lab-docpanel-overview {
+    display: flex;
+    align-items: center;
+}
+
+.lab-docpanel-desc {
+    font-weight: 400;
+    line-height: 1.64;
+    color: #424242;
+}
+
+.lab-docpanel-img {
+    height: 560px;
+    margin-left: 16px;
 }
 
 #universe {
@@ -786,17 +823,6 @@ body {
     border-radius: 50%;
 }
 
-.spinner {
-    bott
-  margin: 100px auto;
-  width: 40px;
-  height: 40px;
-  position: relative;
-  text-align: center;
-  -webkit-animation: sk-rotate 2.0s infinite linear;
-  animation: sk-rotate 2.0s infinite linear;
-}
-
 .dot1, .dot2 {
   width: 60%;
   height: 60%;
@@ -817,57 +843,166 @@ body {
   animation-delay: -1.0s;
 }
 
-@-webkit-keyframes sk-rotate { 100% { -webkit-transform: rotate(360deg) }}
-@keyframes sk-rotate { 100% { transform: rotate(360deg); -webkit-transform: rotate(360deg) }}
-
-@-webkit-keyframes sk-bounce {
-  0%, 100% { -webkit-transform: scale(0.0) }
-  50% { -webkit-transform: scale(1.0) }
+.stars, .twinkling {
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  width:100%;
+  height:100%;
+  display:block;
 }
 
-@keyframes sk-bounce {
-  0%, 100% { 
-    transform: scale(0.0);
-    -webkit-transform: scale(0.0);
-  } 50% { 
-    transform: scale(1.0);
-    -webkit-transform: scale(1.0);
-  }
-}
-@keyframes orbit {
-    0% {
-        transform: rotateZ(0deg);
-    }
-    100% {
-        transform: rotateZ(-360deg);
-    }
+.stars {
+  background:#000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
+  z-index:-2;
 }
 
-@keyframes orbit2 {
-    0% {
-        transform: rotateZ(0deg);
-    }
-    100% {
-        transform: rotateZ(360deg);
-    }
+.twinkling{
+  background:transparent url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat top center;
+  z-index:-2;
+
+  -moz-animation:move-twinkle-back 600s linear infinite;
+  -ms-animation:move-twinkle-back 600s linear infinite;
+  -o-animation:move-twinkle-back 600s linear infinite;
+  -webkit-animation:move-twinkle-back 600s linear infinite;
+  animation:move-twinkle-back 600s linear infinite;
 }
 
-@keyframes fade {
-    0% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-    }
+/* First section of JupyterLab page */
+
+.lab-overview {
+    text-align: center;
+}
+
+.lab-overview-desc {
+    margin-bottom: 48px;
+}
+
+.lab-overview-desc h4 {
+    max-width: 90%;
+    margin: 0 auto;
+    line-height: 1.52;
+    font-weight: 400;
+}
+
+.lab-overview-features {
+    margin: 0 auto;
+    max-width: 600px;
+}
+
+.lab-overview-feature {
+    font-weight: 700;
+}
+
+.lab-overview-feature-title {
+    padding-top: 12px;
+}
+
+.lab-ext-preview-viewer {
+    height: 528px;
+    margin-top: 24px;
+}
+
+.lab-ext-preview {
+    height: 404px;
+    background-color: #757575;
+}
+
+.lab-ext-preview-img {
+    display: inline-block;
+    height: 364px;
+    margin: 40px 62px 0px 62px;
+}
+
+.lab-ext-preview-about {
+    display: inline-block;
+}
+
+.lab-ext-preview-about-head {
+    display: flex;
+    align-items: center;
+    width: 328px;
+    border-bottom: 1px solid #9E9E9E;
+    padding-bottom: 4px;
+}
+
+.lab-ext-preview-about-icon {
+    height: 32px;
+    width: 32px;
+}
+
+.lab-ext-preview-about-desc {
+    max-width: 328px;
+    margin-top: 16px;
+    color: #F5F5F5;
+    line-height: 1.64;
+}
+
+.lab-ext-preview-about-icon, .lab-ext-preview-about-title {
+    display: inline-block;
+}
+
+.lab-ext-preview-about-title {
+    color: white;
+    font-size: 24px;
+    margin-left: 12px;
+}
+
+.lab-ext-preview-content {
+    display: none;
+}
+
+.lab-ext-preview-content.ext-active {
+    display: flex;
+    align-items: center;
+}
+
+.lab-ext-preview-nav {
+    background-color: #424242;
+    height: 124px;
+    display: flex;
+    padding: 0px 20px;
+}
+
+.lab-ext-preview-nav-item {
+    height: 80px;
+    width: 104px;
+    display: inline-block;
+    margin: auto;
+    text-align: center;
+    padding-bottom: 15px;
+}
+
+.lab-ext-preview-nav-item:hover {
+    cursor: pointer;
+}
+
+.lab-ext-preview-nav-item-icon {
+    height: 50px;
+    width: 50px;
+}
+
+.lab-ext-preview-nav-item-title {
+    color: #E0E0E0;
+    font-size: 13px;
+    margin-top: 16px;
+    padding-bottom: 15px;
+    border-bottom: 4px solid #424242;
+    transition: .08s border-bottom-color ease;
+}
+
+.lab-ext-preview-nav-item:hover .lab-ext-preview-nav-item-title {
+    border-bottom: 4px solid rgba(255,255,255,.2);
+}
+
+.lab-ext-preview-nav-item.nav-active .lab-ext-preview-nav-item-title {
+    color: white;
+    border-bottom: 4px solid white;
 }
 
 /* Bootstrap Breakpoint Media Queries */
-/* Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
-  .section-white, .section-grey {
-    padding: 5% 0;
-  }
-}
 @media (max-width: 1200px) {
     .nb-highlight-text {
         margin-top: 32px;
@@ -893,8 +1028,13 @@ body {
         font-weight: 400;
         line-height: 1.375;
     }
+    h5 {
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.3;
+    }
     h4 {
-        font-size: 18px;
+        font-size: 20px;
         font-weight: 500;
         line-height: 1.22;
     }
@@ -924,8 +1064,13 @@ body {
         font-weight: 400;
         line-height: 1.25em;
     }
+    h5 {
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.16em;
+    }
     h4 {
-        font-size: 18px;
+        font-size: 20px;
         font-weight: 500;
         line-height: 1.11em;
     }
@@ -943,6 +1088,9 @@ body {
         font-size: 32px;
         font-weight: 500;
         line-height: 1.25em;
+    }
+    .section-white, .section-grey {
+        padding: 56px 0px;
     }
     .nb-highlight-text {
         text-align: center;
@@ -1050,6 +1198,11 @@ body {
         font-weight: 400;
         line-height: 1.25em;
     }
+    h5 {
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.16;
+    }
     h4 {
         font-size: 18px;
         font-weight: 500;
@@ -1145,4 +1298,63 @@ body {
     100% {
         top: -68px;
     }
+}
+
+@-webkit-keyframes sk-bounce {
+  0%, 100% { -webkit-transform: scale(0.0) }
+  50% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bounce {
+  0%, 100% { 
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  } 50% { 
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+  }
+}
+@keyframes orbit {
+    0% {
+        transform: rotateZ(0deg);
+    }
+    100% {
+        transform: rotateZ(-360deg);
+    }
+}
+
+@keyframes orbit2 {
+    0% {
+        transform: rotateZ(0deg);
+    }
+    100% {
+        transform: rotateZ(360deg);
+    }
+}
+
+@keyframes fade {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+/* Star twinkling effect found on the JupyterLab page */
+@keyframes move-twinkle-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-webkit-keyframes move-twinkle-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-moz-keyframes move-twinkle-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-ms-keyframes move-twinkle-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
 }
