--- a/css/logo-nav.css
+++ b/css/logo-nav.css
@@ -1007,6 +1007,60 @@ body {
     border-bottom: 4px solid white;
 }
 
+#lab-notebook-parallax {
+    padding-top: 100px;
+    padding-bottom: 0px;
+}
+
+.lab-notebook-paper {
+    background-color: white;
+    padding: 64px;
+    width: 100%;
+    height: 530px;
+}
+
+.lab-notebook-logo {
+    height: 60px;
+    width: 60px;
+}
+
+.lab-notebook-cell {
+    width: 100%;
+    height: 36px;
+    display: flex;
+    align-items: center;
+    margin: 24px 0px;
+}
+
+.lab-notebook-cell-prompt {
+    flex: 0 0 auto;
+    font-family: 'Roboto', monospace;
+    font-size: 20px;
+    color: #307FC1;
+    display: inline-block;
+    letter-spacing: 2.8px;
+}
+
+.lab-notebook-cell-input {
+    flex: 0 0 auto;
+    height: 36px;
+    width: 88%;
+    display: inline-block;
+    background-color: #F5F5F5;
+    border: 1px solid #CFCFCF;
+    margin-left: 10px;
+    padding: 8px;
+}
+
+.lab-notebook-cell-output {
+    margin-left: 72px;
+}
+
+.lab-notebook-cell-output-text {
+    margin-bottom: 16px;
+    color: #424242;
+}
+
 /* Bootstrap Breakpoint Media Queries */
 @media (max-width: 1200px) {
     .nb-highlight-text {
