--- a/css/logo-nav.css
+++ b/css/logo-nav.css
@@ -1061,6 +1061,69 @@ body {
     color: #424242;
 }
 
+.lab-features-header {
+    margin-bottom: 4px;
+}
+
+.lab-features-card-container {
+    display: flex;
+    flex-direction: row;
+    flex-flow: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.lab-feature-card {
+    display: inline-block;
+    background-color: white;
+    margin-top: 28px;
+    height: 300px;
+    width: 250px;
+    border: 1px solid #BDBDBD;
+    box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
+}
+
+.lab-feature-card-header {
+    width: 100%;
+    height: 150px;
+    display: flex;
+    align-items: center;
+}
+
+.lab-feature-card-header.code-console {
+    background-color: #0288D1;
+}
+
+.lab-feature-card-header.terminal {
+    background-color: #424242;
+}
+
+.lab-feature-card-header.text-editor {
+    background-color: #455A64;
+}
+
+.lab-feature-card-header.themeable {
+    background-image: url('../assets/jupyterlab-page/more-features/themeable-bg.svg');
+    background-position-x: -1px;
+    background-position-y: -1px;
+}
+
+.lab-feature-card-header.csv {
+    background-color: #2E7D32;
+}
+
+.lab-feature-card-header.img-viewer {
+    background-color: #1A237E;
+}
+
+.lab-feature-card-icon {
+    margin: 0 auto;
+}
+
+.lab-feature-card-text {
+    margin: 20px 24px 24px 24px;
+}
+
 /* Bootstrap Breakpoint Media Queries */
 @media (max-width: 1200px) {
     .nb-highlight-text {
