--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,5 +39,6 @@
     <script src="{{site.baseurl}}/js/architecture.js"></script>
     <script src="{{site.baseurl}}/js/simon.js"></script>
     <script src="{{site.baseurl}}/js/tab.js"></script>
-    <script src="{{site.baseurk}}/js/parallax.min.js"></script>
+    <script src="{{site.baseurl}}/js/parallax.min.js"></script>
+    <script src="{{site.baseurl}}/js/scrollreveal.min.js"></script>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
