Extensions section on JupyterLab page now mobile friendly, disabled extension animation on smaller screens

--- a/css/logo-nav.css
+++ b/css/logo-nav.css
@@ -1268,6 +1268,45 @@ body {
     .lab-content-wrapper .container {
         width: 832px;
     }
+    
+    /* Pagination effect for JupyterLab extension section on the JupyterLab page (for Desktop > 992px) */
+    .move-ext-preview-left-out {
+        display: inline-block;
+        animation: .3s move-ext-preview-left-out ease forwards;
+    }
+
+    @keyframes move-ext-preview-left-out {
+        from {right: 0;}
+        to {right: 744px;}
+    }
+
+    .move-ext-preview-right-out {
+        display: inline-block;
+        animation: .3s move-ext-preview-right-out ease forwards;
+    }
+
+    @keyframes move-ext-preview-right-out {
+        from {left: -744px;}
+        to {left: 744px;}
+    }
+
+    .move-ext-preview-left-in {
+        display: inline-block;
+        animation: .3s move-ext-preview-left-in ease forwards;
+    }
+
+    @keyframes move-ext-preview-left-in {
+        from {right: 744px;}
+        to {right: 0px;}
+    }
+    .move-ext-preview-right-in {
+        display: inline-block;
+        animation: .3s move-ext-preview-right-in ease forwards;
+    }
+    @keyframes move-ext-preview-right-in {
+        from {left: 744px;}
+        to {left: -744px;}
+    }
 }
 @media (max-width: 992px) {
     p {
@@ -1407,6 +1446,45 @@ body {
     }
     .lab-ext-preview-img {
         margin-right: 20px;   
+    }
+    
+    /* Pagination effect for JupyterLab extension section on the JupyterLab page (for Desktop > 992px) */
+    .move-ext-preview-left-out {
+        display: inline-block;
+        animation: .3s move-ext-preview-left-out ease forwards;
+    }
+
+    @keyframes move-ext-preview-left-out {
+        from {right: 0;}
+        to {right: 744px;}
+    }
+
+    .move-ext-preview-right-out {
+        display: inline-block;
+        animation: .3s move-ext-preview-right-out ease forwards;
+    }
+
+    @keyframes move-ext-preview-right-out {
+        from {left: -744px;}
+        to {left: 744px;}
+    }
+
+    .move-ext-preview-left-in {
+        display: inline-block;
+        animation: .3s move-ext-preview-left-in ease forwards;
+    }
+
+    @keyframes move-ext-preview-left-in {
+        from {right: 744px;}
+        to {right: 0px;}
+    }
+    .move-ext-preview-right-in {
+        display: inline-block;
+        animation: .3s move-ext-preview-right-in ease forwards;
+    }
+    @keyframes move-ext-preview-right-in {
+        from {left: 744px;}
+        to {left: -702px;}
     }
     
 }
@@ -1668,44 +1746,4 @@ body {
 @-ms-keyframes move-twinkle-back {
     from {background-position:0 0;}
     to {background-position:-10000px 5000px;}
-}
-
-/* Pagination effect for JupyterLab extension section on the JupyterLab page */
-
-.move-ext-preview-left-out {
-    display: inline-block;
-    animation: .3s move-ext-preview-left-out ease forwards;
-}
-
-@keyframes move-ext-preview-left-out {
-    from {right: 0;}
-    to {right: 744px;}
-}
-
-.move-ext-preview-right-out {
-    display: inline-block;
-    animation: .3s move-ext-preview-right-out ease forwards;
-}
-
-@keyframes move-ext-preview-right-out {
-    from {left: -744px;}
-    to {left: 744px;}
-}
-
-.move-ext-preview-left-in {
-    display: inline-block;
-    animation: .3s move-ext-preview-left-in ease forwards;
-}
-
-@keyframes move-ext-preview-left-in {
-    from {right: 744px;}
-    to {right: 0px;}
-}
-.move-ext-preview-right-in {
-    display: inline-block;
-    animation: .3s move-ext-preview-right-in ease forwards;
-}
-@keyframes move-ext-preview-right-in {
-    from {left: 744px;}
-    to {left: -744px;}
 }
