Added a download now button to the top of the page to download JupyterLab

--- a/css/logo-nav.css
+++ b/css/logo-nav.css
@@ -631,7 +631,7 @@ body {
 /* Styling for JupyterLab page */
 
 .lab-jumbotron {
-    height: 650px;
+    height: 616px;
     color: white;
     position: relative;
     top: -70px;
@@ -852,9 +852,11 @@ body {
 
 .lab-overview {
     text-align: center;
+    padding-top: 50px;
 }
 
 .lab-overview-desc {
+    margin-top: 50px;
     margin-bottom: 48px;
 }
 
