--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,5 +42,6 @@
     <script src="{{site.baseurl}}/js/scrollreveal.min.js"></script>
     <script src="{{site.baseurl}}/js/jquery.typist.js"></script>
     <script src="{{site.baseurl}}/js/jupyterlab.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
     {% endif %}
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
